--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "rubifyer",
+  "name": "@theopenweb/rubifyer",
   "version": "1.0.0",
   "description": "Simple library for rubifying(Add ruby characters/tags) the page.\r Goal is to simply get mapped ruby characters from API and display for words in current page.",
   "main": "index.js",
   "scripts": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/goldingdamien/rubifyer.git"
+    "url": "git+https://github.com/theopenwebjp/rubifyer.git"
   },
   "keywords": ["ruby", "japanese", "ルビ", "ルビー", "送り仮名"],
-  "author": "",
+  "author": "The Open Web <noreply@theopenweb.jp> (https://theopenweb.jp)",
+  "contributors": [
+    "Damien Golding <noreply@damiengolding.com> (https://damiengolding.com)"
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/goldingdamien/rubifyer/issues"
+    "url": "https://github.com/theopenwebjp/rubifyer/issues"
   },
-  "homepage": "https://github.com/goldingdamien/rubifyer#readme"
+  "homepage": "https://theopenweb.info",
+  "private": false
 }
